--- a/njir.html
+++ b/njir.html
@@ -388,7 +388,7 @@
             "Hatiku hanya untukmu, selamanya 💝",
             "Senyummu adalah kebahagiaan terbesar 😊",
             "Cintaku padamu akan abadi selamanya 💞",
-            "Kamu adalah alasan aku bahagia setiap hari 🌈"
+            "Kamu adalah alasan aku bahagia setiap hari "
         ];
 
         function showPage(pageId) {
