--- a/index.html
+++ b/index.html
@@ -261,10 +261,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="photo-frame">
-            <div class="photo-placeholder">
-                Foto Kita ❤️
-            </div>
+        <div>
         </div>
         <h1>Hai</h1>
         <h1>Rg Demen Ajk Kamu</h1>
